fix: card change is made, adding some seed data, changes in openapi
